# Glance-fashion-search

./: .gitignore  AGENT.md  CHANGELOG.md  Glance ML Internship Assignment.md  LICENSE  M1_PLAN.md  PROJECT_EXPLAINED.md  PROJECT_STATUS.md  README.md  RUN.md  TODO.md  config.yaml  conftest.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
app/: README.md  streamlit_app.py
dataset/: AXIS_MANIFEST.md  README.md
eval/results/: 01_yellow_raincoat.json  02_business_office.json  03_blue_shirt_park.json  04_casual_city.json  05_red_tie_white_shirt.json  ablation.csv  metrics.csv  metrics.json  summary.json
indexer/: build_index.py
report/: Glance_Internship_Report.html  Glance_Internship_Report.md
retriever/: search.py
scripts/: README.md  build_caption_index.py  build_image_attribute_cache.py  build_report.py  caption_corpus.py  reconstruct_captions.py  reembed_captions.py  run_ablation.py  run_eval.py  run_metrics.py
src/glance_search/: __init__.py  attributes.py  captions.py  config.py  embedder.py  errors.py  image_attributes.py  index_store.py  logging_setup.py  metrics.py  model.py  pipeline.py  py.typed  reranker.py  semantic_attributes.py
tests/: README.md  __init__.py  conftest.py  test_attributes.py  test_config.py  test_embedder.py  test_errors_logging.py  test_index_store.py  test_metrics.py  test_pipeline.py  test_reranker.py  test_rrf.py  test_semantic_attributes.py
